@@ -4,6 +4,7 @@
  * moved config tool stuff from pkgconfig to cfgtool.
  * moved pmkcmd an pmkcmdopt typedefs to common.
  * improved pmkpc to fall back on config tool if module is not found.
+ * added missing pkg-config options to pmkpc as 'not implemented' yet.
 
 13 Jan 2004 mipsator
  * improved pmkpc to not care about argument order (like pkg-config).
